--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,11 +20,11 @@ for_window [class=".*"] border pixel 0
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Start ~compton~ picom
-exec picom -b --backend glx --paint-on-overlay --refresh-rate 60 --glx-no-stencil --glx-no-rebind-pixmap --glx-swap-method -1
+exec picom -b --backend glx --refresh-rate 60 --glx-no-stencil --glx-no-rebind-pixmap --glx-swap-method
 
 # Use light to adjust the brightness of the laptop monitor
-bindsym XF86MonBrightnessDown exec --no-startup-id "light -U 10"
-bindsym XF86MonBrightnessUp   exec --no-startup-id "light -A 10"
+bindsym XF86MonBrightnessDown exec --no-startup-id "sudo xbacklight -dec 10"
+bindsym XF86MonBrightnessUp   exec --no-startup-id "sudo xbacklight -inc 10"
 
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
