--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,21 +18,25 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
+background = #1f2430
+background-alt = #1f2430
 ;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
+foreground = #cbccc6
+foreground-alt = #5c6773
+primary = #FFCC66
 secondary = #e60053
-alert = #bd2c40
+alert = #f28779
 
 [bar/top]
 monitor = ${env:MONITOR:eDP1}
-width = 100%
+width = 100%:-10
 height = 27
-radius = 8.0
 fixed-center = true
+offset-y = 5
+offset-x = 5
+
+override-redirect = true
+wm-restack = i3
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -44,7 +48,8 @@ border-size = 0
 border-color = #aa000000
 
 padding-left = 0
-padding-right = 2
+padding-top = 2
+; padding-right = 2
 
 module-margin-left = 1
 module-margin-right = 2
@@ -59,7 +64,10 @@ modules-center = date
 modules-right = pulseaudio filesystem backlight memory cpu wlan battery temperature powermenu
 
 tray-position = right
-tray-padding = 2
+padding-right = 13
+tray-detached = true
+tray-offset-x = -4
+tray-offset-y = 0
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -123,7 +131,7 @@ card = intel_backlight
 format = <label>
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0A81F5
+format-underline = #73D0FF
 label = "%percentage%"
 
 [module/cpu]
@@ -131,7 +139,7 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-underline = #D4BFFF
 label = %percentage:2%%
 
 [module/memory]
@@ -139,7 +147,7 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+format-underline = #95E6CB
 label = %percentage_used%%
 
 [module/wlan]
@@ -164,17 +172,17 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1
 
 date =
-date-alt = " %Y-%m-%d"
+date-alt = " %d %b %Y"
 
 time = %H:%M
 time-alt = %H:%M:%S
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-underline = #77A8D9
 
 label = %date% %time%
 
@@ -186,24 +194,25 @@ label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted =  muted
-label-muted-foreground = #666
+label-muted-foreground = #5C6773
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+bar-volume-foreground-0 = #BAE67E
+bar-volume-foreground-1 = #BAE67E
+bar-volume-foreground-2 = #BAE67E
+bar-volume-foreground-3 = #BAE67E
+bar-volume-foreground-4 = #FFA759
+bar-volume-foreground-5 = #FFA759
+bar-volume-foreground-6 = #F28779
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
+bar-volume-indicator-foreground = ${colors.foreground}
 bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = #323A4C 
 
 [module/battery]
 type = internal/battery
@@ -212,7 +221,7 @@ adapter = AC
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging-underline = #95E6CB
 
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
@@ -244,7 +253,7 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #f50a4d
+format-underline = #F29E74
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
@@ -265,9 +274,9 @@ expand-right = true
 format-spacing = 1
 
 label-open = 
-label-open-foreground = ${colors.secondary}
+label-open-foreground = #F28779 
 label-close =  cancel
-label-close-foreground = ${colors.secondary}
+label-close-foreground = #FFA759 
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
