--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,6 +41,11 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+bindsym XF86AudioPlay exec spotifyctl play-pause
+bindsym XF86AudioPause exec spotifyctl play-pause
+bindsym XF86AudioNext exec spotifyctl next
+bindsym XF86AudioPrev exec spotifyctl previous
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -192,13 +197,16 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id bluetoothctl power on
 
 # Set background
-exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/clouds-painting.jpg
+# exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/nord-peeks.png
+exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/tree-painting.jpg
+exec_always multimonitorlock -u /home/michael/Pictures/wallpapers/animal-crossing.jpg
 
 # Start xrandr based on the available monitor setups
 # exec_always ~/.config/i3/xrandr_i3.sh
 
 # Restart the polybar after reinitialising the i3 and the monitors
 exec_always ~/.config/polybar/launch.sh
+exec arandr-indicator
 
 # Reinitialise the modmap
 exec_always xmodmap ~/.Xmodmap
