--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,21 +3,21 @@ backend = "glx";
 
 vsync= "opengl-swc";
 glx-no-stencil = true;
-unredir-if-possible = true;
+# unredir-if-possible = true;
 #glx-copy-from-front = true;
 glx-swap-method = 2;
-xrender-sync-fence = true;
+# xrender-sync-fence = true;
 
 # Shadow
-shadow = true;
-shadow-radius = 12;
-shadow-opacity = 0.25;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-exclude = [
-    "class_g = 'XAVA'"
-];
-
+# shadow = true;
+# shadow-radius = 12;
+# shadow-opacity = 0.25;
+# shadow-offset-x = -7;
+# shadow-offset-y = -7;
+# shadow-exclude = [
+#     "class_g = 'XAVA'"
+# ];
+#
 # Opacity
 opacity-rule = [
 	"100:class_g *= 'Xfce4-panel'"
@@ -33,7 +33,7 @@ wintypes:
 };
 
 # Rounded corners
-corner-radius = 6.0;
+corner-radius = 5.0;
 rounded-corners-exclude = [
    # "widthb > 1365 && heightb > 736" # For smart gaps and a non-floating bar
    # "class_g = 'Dunst'"
@@ -41,16 +41,16 @@ rounded-corners-exclude = [
 
 
 # Add dual-kawase blur
-blur-background = true;
-blur-background-frame = true;
-blur-background-fixed = true;
-blur-kern = "3x3box";
-blur-method = "kawase";
-blur-strength = 16;
-blur-background-exclude = [
-    "class_g = 'slop'",
-    "class_g = 'XAVA'"
-];
+# blur-background = true;
+# blur-background-frame = true;
+# blur-background-fixed = true;
+# blur-kern = "3x3box";
+# blur-method = "kawase";
+# blur-strength = 16;
+# blur-background-exclude = [
+#     "class_g = 'slop'",
+#     "class_g = 'XAVA'"
+# ];
 
 fading = true;
 fade-in-step = 0.1;
