--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -66,10 +66,11 @@ font-3 = "Font Awesome 5 Brands:pixelsize=8;1"
 
 modules-left = i3 xwindow
 modules-center = date
-modules-right = pulseaudio filesystem backlight memory cpu wlan battery temperature powermenu
+modules-right = spotify spotify-prev spotify-play-pause spotify-next pulseaudio cpu battery powermenu
+; modules-right = pulseaudio filesystem backlight memory cpu wlan battery temperature powermenu
 
 tray-position = right
-padding-right = 13
+padding-right = 18
 tray-detached = true
 tray-offset-x = -4
 tray-offset-y = 0
@@ -79,7 +80,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:50:...%
+label = %title:0:25:...%
 label-underline= ${colors.primary}
 label-padding = 2
 
@@ -194,14 +195,16 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
+; format-volume = <label-volume> <bar-volume>
+format-volume = <label-volume>
+format-volume-underline = #F28779
 label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted =  muted
 label-muted-foreground = #5C6773
 
-bar-volume-width = 10
+bar-volume-width = 11
 bar-volume-foreground-0 = #BAE67E
 bar-volume-foreground-1 = #BAE67E
 bar-volume-foreground-2 = #BAE67E
@@ -211,13 +214,13 @@ bar-volume-foreground-5 = #FFA759
 bar-volume-foreground-6 = #F28779
 bar-volume-gradient = false
 bar-volume-indicator = |
-bar-volume-indicator-font = 2
+; bar-volume-indicator-font = 2
 bar-volume-indicator-foreground = ${colors.foreground}
 bar-volume-fill = ─
-bar-volume-fill-font = 2
+; bar-volume-fill-font = 2
 bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = #323A4C 
+; bar-volume-empty-font = 2
+bar-volume-empty-foreground = #323A4C
 
 [module/battery]
 type = internal/battery
@@ -258,9 +261,9 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #F29E74
+format-underline = #FFA759
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+format-warn-underline = #F28779
 
 label = %temperature-c%
 label-warn = %temperature-c%
@@ -269,7 +272,34 @@ label-warn-foreground = ${colors.secondary}
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+ramp-foreground = ${colors.foreground-alt}
+
+[module/spotify]
+type = custom/script
+tail = true
+format-prefix = " "
+format = <label>
+interval = 10
+exec = spotifyctl status -q
+
+[module/spotify-prev]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = spotifyctl previous
+
+[module/spotify-play-pause]
+type = custom/script
+exec = echo ""
+; exec = echo ""
+format = <label>
+click-left = spotifyctl playpause
+
+[module/spotify-next]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = spotifyctl next
 
 [module/powermenu]
 type = custom/menu
@@ -279,26 +309,33 @@ expand-right = true
 format-spacing = 1
 
 label-open = 
-label-open-foreground = #F28779 
+label-open-foreground = #F28779
 label-close =  cancel
-label-close-foreground = #FFA759 
+label-close-foreground = #FFA759
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = suspend
 menu-0-1-exec = menu-open-2
+menu-0-2 = power off
+menu-0-2-exec = menu-open-3
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+menu-2-0 = cancel
+menu-2-0-exec = menu-open-0
+menu-2-1 = suspend
+menu-2-1-exec = multimonitorlock -l dim && systemctl suspend
+
+menu-3-0 = power off
+menu-3-0-exec = sudo poweroff
+menu-3-1 = cancel
+menu-3-1-exec = menu-open-0
 
 [settings]
 screenchange-reload = true
