--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,12 @@
   insteadOf = https://github.com/
 [pull]
   rebase = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[commit]
+	gpgsign = true
+[gpg]
+	program = /usr/bin/gpg2
