Update fish, i3, picom and polybar

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,11 +2,12 @@
 backend = "glx";
 
 vsync= "opengl-swc";
+
 glx-no-stencil = true;
-# unredir-if-possible = true;
-#glx-copy-from-front = true;
-glx-swap-method = 2;
-# xrender-sync-fence = true;
+glx-copy-from-front = false;
+glx-use-copysubbuffermesa = false;
+glx-no-rebind-pixmap = true;
+glx-swap-method = "6";
 
 # Shadow
 # shadow = true;
