--- a/.config/i3/config
+++ b/.config/i3/config
@@ -50,16 +50,19 @@ bindsym XF86AudioPrev exec spotifyctl previous
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec terminator
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
+
+# Make window sticky to all workspaces
+bindsym $mod+Shift+s sticky toggle
 
 # start rofi (a program launcher and window list)
 bindsym $mod+d exec rofi -show combi -theme nord -location 0
 
 # lock the screen
-bindsym $mod+Shift+x exec multimonitorlock -l dim
+bindsym $mod+Shift+x exec multilockscreen -l dim
 
 # change focus
 bindsym $mod+j focus left
@@ -198,15 +201,17 @@ exec --no-startup-id bluetoothctl power on
 
 # Set background
 # exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/nord-peeks.png
-exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/tree-painting.jpg
-exec_always multimonitorlock -u /home/michael/Pictures/wallpapers/animal-crossing.jpg
+exec_always --no-startup-id feh --bg-fill ~/Pictures/wallpapers/zion.jpg
+exec_always multilockscreen -u /home/michael/Pictures/wallpapers/nookdark.jpg
 
 # Start xrandr based on the available monitor setups
 # exec_always ~/.config/i3/xrandr_i3.sh
 
 # Restart the polybar after reinitialising the i3 and the monitors
 exec_always ~/.config/polybar/launch.sh
-exec arandr-indicator
+# exec arandr-indicator
+exec nm-applet
+exec autorandr display
 
 # Reinitialise the modmap
 exec_always xmodmap ~/.Xmodmap
