--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -325,7 +325,7 @@ menu-0-2-exec = menu-open-3
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = systemctl reboot
 
 menu-2-0 = cancel
 menu-2-0-exec = menu-open-0
@@ -333,7 +333,7 @@ menu-2-1 = suspend
 menu-2-1-exec = multimonitorlock -l dim && systemctl suspend
 
 menu-3-0 = power off
-menu-3-0-exec = sudo poweroff
+menu-3-0-exec = systemctl poweroff
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
 
