--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,13 +1,14 @@
 # Basic
 backend = "glx";
 
-vsync= "opengl-swc";
+vsync = true;
 
 glx-no-stencil = true;
 glx-copy-from-front = false;
 glx-use-copysubbuffermesa = false;
 glx-no-rebind-pixmap = true;
-glx-swap-method = "6";
+# glx-swap-method = "6";
+use-damage = true;
 
 # Shadow
 # shadow = true;
