Use spt for polybar and setup for all displays

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -66,7 +66,8 @@ font-3 = "Font Awesome 5 Brands:pixelsize=8;1"
 
 modules-left = i3 xwindow
 modules-center = date
-modules-right = spotify spotify-prev spotify-play-pause spotify-next pulseaudio cpu battery powermenu
+modules-right = spt spt-prev spt-play-pause spt-next pulseaudio cpu battery powermenu
+; modules-right = spotify spotify-prev spotify-play-pause spotify-next pulseaudio cpu battery powermenu
 ; modules-right = pulseaudio filesystem backlight memory cpu wlan battery temperature powermenu
 
 tray-position = right
@@ -273,6 +274,33 @@ ramp-0 = 
 ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
+
+[module/spt]
+type = custom/script
+tail = true
+format-prefix = " "
+format = <label>
+interval = 10
+exec = spt playback --status
+
+[module/spt-prev]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = spt playback --previous
+
+[module/spt-play-pause]
+type = custom/script
+exec = echo ""
+; exec = echo ""
+format = <label>
+click-left = spt playback --toggle
+
+[module/spt-next]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = spt playback --next
 
 [module/spotify]
 type = custom/script
