--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,20 +16,33 @@
 ;
 ;==========================================================
 
+[gloabl/wm]
+include-file=$HOME/.config/polybar/mocha.ini
+
 [colors]
 ; NORD
-background = #2E3440
-background-alt = #2E3440
-foreground = #D8DEE9
-foreground-alt = #D8DEE9
+; background = #2E3440
+; background-alt = #2E3440
+; foreground = #D8DEE9
+; foreground-alt = #D8DEE9
+;
+; CATPPUCCIN
+background = ${colors.base}
+background-alt = ${colors.mantle}
+foreground = ${colors.text}
+foreground-alt = ${colors.subtext0}
+primary = ${colors.yellow}
+secondary = ${colors.maroon}
+alert = ${colors.red}
+
 ; AYU
 ; background = #1f2430
 ; background-alt = #1f2430
 ; foreground = #cbccc6
 ; foreground-alt = #5c6773
-primary = #FFCC66
-secondary = #e60053
-alert = #FF3333
+; primary = #FFCC66
+; secondary = #e60053
+; alert = #FF3333
 
 [bar/top]
 monitor = ${env:MONITOR:eDP1}
@@ -59,19 +72,19 @@ padding-top = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Fira Code:pixelsize=12;1
+font-0 = Fira Sans:pixelsize=12;1
 font-1 = "Font Awesome 5 Free:style=Regular:pixelsize=8;1"
 font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=8;1"
 font-3 = "Font Awesome 5 Brands:pixelsize=8;1"
 
 modules-left = i3 xwindow
 modules-center = date
-modules-right = spt spt-prev spt-play-pause spt-next pulseaudio cpu battery powermenu
-; modules-right = spotify spotify-prev spotify-play-pause spotify-next pulseaudio cpu battery powermenu
+; modules-right = spt spt-prev spt-play-pause spt-next pulseaudio cpu battery powermenu
+modules-right = spotify spotify-prev spotify-play-pause spotify-next pulseaudio cpu battery powermenu
 ; modules-right = pulseaudio filesystem backlight memory cpu wlan battery temperature powermenu
 
 tray-position = right
-padding-right = 18
+padding-right = 26
 tray-detached = true
 tray-offset-x = -4
 tray-offset-y = 0
@@ -275,59 +288,36 @@ ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
 
-[module/spt]
-type = custom/script
-tail = true
-format-prefix = " "
-format = <label>
-interval = 10
-exec = spt playback --status
-
-[module/spt-prev]
-type = custom/script
-exec = echo ""
-format = <label>
-click-left = spt playback --previous
-
-[module/spt-play-pause]
-type = custom/script
-exec = echo ""
-; exec = echo ""
-format = <label>
-click-left = spt playback --toggle
-
-[module/spt-next]
-type = custom/script
-exec = echo ""
-format = <label>
-click-left = spt playback --next
-
 [module/spotify]
 type = custom/script
 tail = true
+exec-if = "pgrep spotify -x"
 format-prefix = " "
 format = <label>
-interval = 10
-exec = spotifyctl status -q
+interval = 1
+exec = playerctl metadata --format "{{artist}} - {{title}}"
 
 [module/spotify-prev]
 type = custom/script
 exec = echo ""
+exec-if = "pgrep spotify -x"
 format = <label>
-click-left = spotifyctl previous
+click-left = playerctl --player=spotify previous
 
 [module/spotify-play-pause]
 type = custom/script
 exec = echo ""
+exec-if = "pgrep spotify -x"
 ; exec = echo ""
 format = <label>
-click-left = spotifyctl playpause
+click-left = playerctl --player=spotify play-pause
 
 [module/spotify-next]
 type = custom/script
 exec = echo ""
+exec-if = "pgrep spotify -x"
 format = <label>
-click-left = spotifyctl next
+click-left = playerctl --player=spotify next
 
 [module/powermenu]
 type = custom/menu
